Stows more assets. Updates SCSS. Tweaks gradient.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@ MVP: Board members can log in and see a list of donors and the time they were la
 					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
 					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
 					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
-					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+          <ul class="actions special">
+						<li><a href="#" class="button wide primary">Login</a></li>
+						<li><a href="#" class="button wide">More Info</a></li>
 					</ul>
 				</div>
 			</section>
