Login page start, favicon embedded.

--- a/login.html
+++ b/login.html
@@ -17,11 +17,11 @@ MVP: Board members can log in and see a list of donors and the time they were la
 
 <html>
 	<head>
-		<title>Bountiful Children's Foundation</title>
+		<title>BCF DMS Login</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link href="bcfassets/favicon.ico" type="image/x-icon" rel="icon">
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link href="/bcfassets/favicon.ico" type="image/x-icon" rel="icon">
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -29,14 +29,12 @@ MVP: Board members can log in and see a list of donors and the time they were la
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<img class ="palerbg" src="bcfassets/Bountiful-logo.png" />
-					<h1>Welcome to <br /> <strong>Bountiful Children's Foundation</strong><br />
-					Donor Management Services</h1>
-					<p>Saving lives since 2008,<br />
-					and much faster since 2019.</p>
+					<h1>Log In Now<br /></h1>
+					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
+					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
           <ul class="actions special">
-						<li><a href="#" class="button wide">Request Account</a></li>
-						<li><a href="login.html" class="button wide primary">Log In</a></li>
+						<li><a href="#" class="button wide primary">Login</a></li>
+						<li><a href="#" class="button wide">More Info</a></li>
 					</ul>
 				</div>
 			</section>
