Begin refactoring SCSS. Logo added.

--- a/index.html
+++ b/index.html
@@ -26,20 +26,36 @@ MVP: Board members can log in and see a list of donors and the time they were la
 	</head>
 	<body class="is-preload">
 
+    <nav>
+      <img src="bcfassets/Bountiful-logo.png" />
+    </nav>
 		<!-- Header -->
 			<section id="header">
+        <!-- <img class ="palerbg" src="bcfassets/Bountiful-logo.png" /> -->
 				<div class="inner">
-					<img class ="palerbg" src="bcfassets/Bountiful-logo.png" />
-					<h1>Welcome to <br /> <strong>Bountiful Children's Foundation</strong><br />
-					Donor Management Services</h1>
+					<!-- <img class ="palerbg" src="bcfassets/Bountiful-logo.png" /> -->
+					<h2>Welcome to Donor Management Services</h2>
 					<p>Saving lives since 2008,<br />
 					and much faster since 2019.</p>
           <ul class="actions special">
-						<li><a href="#" class="button wide">Request Account</a></li>
-						<li><a href="login.html" class="button wide primary">Log In</a></li>
+            <li><a href="login.html" class="button wide primary">Log In</a></li>
+						<li><a href="login.html" class="button wide">Request Account</a></li>
 					</ul>
 				</div>
 			</section>
+
+      <!-- "Bountiful Logo
+Cool Splash Starts
+I got what you need.
+[LOGIN]
+[REGISTER]
+[MORE INFO?]
+Cool Splash Ends
+
+On desktop the logo should disappear into the corner maybe?
+oh, exploit the way opacity works, make a navbar and then on desktop, opacity it and right-justify it, and give it a border?
+no wait, that's not what happens. hmmm. set it in the header, and then pop it into the top-right corner from a bar? yeah.
+-->
 
 		<!-- One -->
 			<section id="one" class="main style1">
@@ -433,7 +449,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<h5>Fit</h5>
 						<div class="box alt">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-12"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
+								<div class="col-12"><span class="image fit">Okay,
+
+On mobile, it should look like
+
+<img src="images/pic06.jpg" alt="" /></span></div>
 								<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 								<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 								<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
@@ -464,7 +484,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Design: Jubilee Young & <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
