Not writing small enough commits. Repainted SVG & refactoring for proper styling.

--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@ MVP: Board members can log in and see a list of donors and the time they were la
 			</section>
 
 		<!-- One -->
-			<section id="one" class="main style1">
+			<!-- <section id="one" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
@@ -55,10 +55,10 @@ MVP: Board members can log in and see a list of donors and the time they were la
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Two -->
-			<section id="two" class="main style2">
+			<!-- <section id="two" class="main style2">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
@@ -82,10 +82,10 @@ MVP: Board members can log in and see a list of donors and the time they were la
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Three -->
-			<section id="three" class="main style1 special">
+			<!-- <section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Adipiscing amet consequat</h2>
@@ -118,10 +118,10 @@ MVP: Board members can log in and see a list of donors and the time they were la
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Four -->
-			<section id="four" class="main style2 special">
+			<!-- <section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
 						<h2>Ipsum feugiat consequat?</h2>
@@ -132,7 +132,7 @@ MVP: Board members can log in and see a list of donors and the time they were la
 						<li><a href="#" class="button wide">Learn More</a></li>
 					</ul>
 				</div>
-			</section>
+			</section> --> -->
 
 		<!-- Five -->
 		<!--
