Restyle main login button, mobile firster.

--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@ MVP: Board members can log in and see a list of donors and the time they were la
 					</ul>
 				</div>
 			</section>
+      <section>
+      <!-- <ul class="actions special">
+        <li><a href="login.html" class="button wide primary">Log In</a></li>
+        <li><a href="login.html" class="button wide">Request Account</a></li>
+      </ul>
+    </section> -->
 
       <!-- "Bountiful Logo
 Cool Splash Starts
