Almost complete mobile refactoring.

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 -->
 
 		<!-- One -->
-			<section id="one" class="main style1">
+			<!-- <section id="one" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
@@ -201,10 +201,10 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Two -->
-			<section id="two" class="main style2">
+			<!-- <section id="two" class="main style2">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
@@ -228,10 +228,10 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Three -->
-			<section id="three" class="main style1 special">
+			<!-- <section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Adipiscing amet consequat</h2>
@@ -264,10 +264,10 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Four -->
-			<section id="four" class="main style2 special">
+			<!-- <section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
 						<h2>Ipsum feugiat consequat?</h2>
@@ -278,7 +278,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 						<li><a href="#" class="button wide">Learn More</a></li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Five -->
 		<!--
