Some SCSS cleanup, beginning animated component.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ MVP: Board members can log in and see a list of donors and the time they were la
 	</head>
 	<body class="is-preload">
 
-    <nav class="compassbar">
-      <a href="#" id="compasslink"><i class="major icon fa-compass compassicon"></i></a>
+    <nav id="compassbar">
+      <a href="#" id="compasslink"><i id="compassicon" class="major icon fa-compass"></i></a>
     </nav>
     <!-- <header><img src="bcfassets/Bountiful-logo.png" /></header> -->
 		<!-- Header -->
 			<section id="header">
-        <svg class="bcflogo" width="336px" height="90px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <svg class="bcflogo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           viewBox="0 0 580 180" style="enable-background:new 0 0 580 180;" xml:space="preserve">
           <style type="text/css">
           .st0{fill:#3A3580;}
@@ -155,15 +155,15 @@ MVP: Board members can log in and see a list of donors and the time they were la
         </svg>
 				<div class="inner">
 					<!-- <img class ="palerbg" src="bcfassets/Bountiful-logo.png" /> -->
-					<h1>Welcome</h1>
-          <h2>to <strong>Donor Management Services</strong></h1>
+					<h1>Welcome <br />
+          to <strong>Donor Management Services</strong></h1>
 					<p>Saving lives since 2008,<br />
 					and much faster since 2019.</p>
           <ul class="actions special">
             <li></li>
             <li><a href="login.html" class="button wide primary">Log In</a></li>
 						<li><a href="login.html" class="button wide">Request Account</a></li>
-            <li><a href="#" class="button wide">More Info</a></li>
+            <!-- <li><a href="#" class="button wide">More Info</a></li> -->
 					</ul>
 				</div>
 			</section>
