Compass piece built, needs menu to pop out.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ MVP: Board members can log in and see a list of donors and the time they were la
 	</head>
 	<body class="is-preload">
 
-    <nav id="compassbar">
-      <a href="#" id="compasslink"><i id="compassicon" class="major icon fa-compass"></i></a>
+    <nav id="compass-bar">
+      <a href="#" id="compass-link"><i id="compass-icon" class="major icon fa-compass"></i></a>
     </nav>
     <!-- <header><img src="bcfassets/Bountiful-logo.png" /></header> -->
 		<!-- Header -->
@@ -167,6 +167,7 @@ MVP: Board members can log in and see a list of donors and the time they were la
 					</ul>
 				</div>
 			</section>
+
       <section>
       <!-- <ul class="actions special">
         <li><a href="login.html" class="button wide primary">Log In</a></li>
@@ -188,7 +189,24 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 -->
 
 		<!-- One -->
-			<section id="one" class="main style1">
+    <section id="one" class="main style1">
+      <div class="container">
+      <h2>Keep track of donors, easier!</h2>
+      <p>Save their contact information!</p>
+      <p>Track their last contact date so you don't annoy them too often!</p>
+      <p>Add their donation history!</p>
+      <p>Keep track of donation allocations!</p>
+      <p>Feed malnourished children faster!</p>
+    </div>
+    </section>
+    <section id="two" class="main style2">
+      <div class="container">
+      <h3>Built By</h3>
+      <p>the Students of Lambda School</p>
+    </div>
+    </section>
+  </section>
+			<!-- <section id="one" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
@@ -203,10 +221,10 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Two -->
-			<section id="two" class="main style2">
+			<!-- <section id="two" class="main style2">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
@@ -230,7 +248,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Three -->
 			<!-- <section id="three" class="main style1 special">
@@ -626,6 +644,7 @@ On mobile, it should look like
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+      <script src="assets/js/compass.js"></script>
 
 	</body>
 </html>
