Commence about paging.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ MVP: Board members can log in and see a list of donors and the time they were la
           .st2{fill:#BE3269;}
           .st3{fill:#D45E27;}
           .st4{fill:#D45E27;}
-          .st5{fill:#FAA21F;}
+          .st5{fill:#3A3580;}
           </style>
           <g>
           <g>
@@ -189,7 +189,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 -->
 
 		<!-- One -->
-    <section id="one" class="main style1">
+    <section id="one" class="main style2">
       <div class="container">
       <h2>Keep track of donors, easier!</h2>
       <p>Save their contact information!</p>
@@ -199,10 +199,12 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
       <p>Feed malnourished children faster!</p>
     </div>
     </section>
-    <section id="two" class="main style2">
+    <section id="two" class="main style1">
       <div class="container">
       <h3>Built By</h3>
       <p>the Students of Lambda School</p>
+      <svg class="d-block" width="32" height="32" viewbox="75 80 177 180" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>Lambda</title><path d="M151.48572955 113.62307213l-40.54266566 72.53066485h22.85333277l29.78266592-53.83333199 29.78266592 53.83333199h22.85333276l-40.54266565-72.53066485z" fill="#B22222" /><path d="M163.37039592 235.8932024l-62.28666511-44.23333222v-90.92399773h125.02666354v90.62799773zM81.95573128 82.19853958V201.2265366l81.41466464 57.85866522 81.83199795-58.15466521V82.19853958z" fill="#B22222" /></svg>
+
     </div>
     </section>
   </section>
