--- a/about.html
+++ b/about.html
@@ -640,11 +640,11 @@ On mobile, it should look like
 			</section>
 
 		<!-- Scripts -->
-			<!-- <script src="assets/js/jquery.min.js"></script> -->
-			<!-- <script src="assets/js/jquery.scrolly.min.js"></script> -->
-			<!-- <script src="assets/js/browser.min.js"></script> -->
-			<!-- <script src="assets/js/breakpoints.min.js"></script> -->
-			<!-- <script src="assets/js/util.js"></script> -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
       <script src="assets/js/compass.js"></script>
 
