--- a/about.html
+++ b/about.html
@@ -29,145 +29,10 @@ MVP: Board members can log in and see a list of donors and the time they were la
 
     <nav id="compass-bar">
       <a href="#" id="compass-link"><i id="compass-icon" class="major icon fa-compass"></i></a>
+      <a href="#" class="button">About Us</a>
     </nav>
     <!-- <header><img src="bcfassets/Bountiful-logo.png" /></header> -->
 		<!-- Header -->
-			<section id="header">
-        <svg class="bcflogo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          viewBox="0 0 580 180" style="enable-background:new 0 0 580 180;" xml:space="preserve">
-          <style type="text/css">
-          .st0{fill:#3A3580;}
-          .st1{fill:#BE3269;}
-          .st2{fill:#BE3269;}
-          .st3{fill:#D45E27;}
-          .st4{fill:#D45E27;}
-          .st5{fill:#3A3580;}
-          </style>
-          <g>
-          <g>
-          <g>
-            <path class="st0" d="M53.6,137.9c-0.4-0.5-0.9-0.9-1.5-1.2c-0.6-0.3-1.3-0.4-2.1-0.4c-0.8,0-1.5,0.2-2.2,0.5
-              c-0.7,0.3-1.3,0.7-1.7,1.3c-0.5,0.5-0.9,1.2-1.2,1.9c-0.3,0.7-0.4,1.6-0.4,2.4c0,0.9,0.1,1.7,0.4,2.4c0.3,0.7,0.7,1.4,1.1,1.9
-              c0.5,0.5,1,1,1.7,1.3c0.7,0.3,1.4,0.5,2.1,0.5c0.9,0,1.6-0.2,2.3-0.5c0.7-0.4,1.2-0.9,1.6-1.5l3.5,2.6c-0.8,1.1-1.8,2-3,2.5
-              c-1.2,0.5-2.5,0.8-3.8,0.8c-1.5,0-2.8-0.2-4.1-0.7c-1.3-0.5-2.3-1.1-3.2-2c-0.9-0.9-1.6-1.9-2.1-3.1c-0.5-1.2-0.8-2.6-0.8-4.1
-              c0-1.5,0.2-2.9,0.8-4.1c0.5-1.2,1.2-2.3,2.1-3.1c0.9-0.9,2-1.5,3.2-2c1.2-0.5,2.6-0.7,4.1-0.7c0.5,0,1.1,0,1.7,0.1
-              c0.6,0.1,1.2,0.3,1.7,0.5c0.6,0.2,1.1,0.5,1.6,0.9c0.5,0.4,1,0.8,1.4,1.3L53.6,137.9z"/>
-          </g>
-          <polygon class="st0" points="67.1,133 71.2,133 71.2,140 79.3,140 79.3,133 83.5,133 83.5,151.9 79.3,151.9 79.3,143.7
-            71.2,143.7 71.2,151.9 67.1,151.9 		"/>
-          <rect x="94.8" y="133" class="st0" width="4.2" height="18.9"/>
-          <polygon class="st0" points="110.4,133 114.6,133 114.6,148.1 122.3,148.1 122.3,151.9 110.4,151.9 		"/>
-          <g>
-            <path class="st0" d="M136.3,148.1h2.2c1,0,1.9-0.1,2.7-0.3c0.8-0.2,1.5-0.5,2.2-1c0.6-0.5,1.1-1.1,1.4-1.8
-              c0.3-0.7,0.5-1.6,0.5-2.7c0-0.9-0.2-1.7-0.5-2.4c-0.4-0.7-0.8-1.2-1.4-1.7c-0.6-0.4-1.3-0.8-2.1-1c-0.8-0.2-1.6-0.3-2.5-0.3h-2.5
-              V148.1z M132.1,133h6.3c1.5,0,3,0.2,4.3,0.5c1.4,0.3,2.6,0.9,3.6,1.6c1,0.8,1.8,1.7,2.4,3c0.6,1.2,0.9,2.7,0.9,4.4
-              c0,1.5-0.3,2.9-0.9,4c-0.6,1.2-1.4,2.1-2.3,2.9c-1,0.8-2.1,1.4-3.4,1.8c-1.3,0.4-2.6,0.6-4,0.6h-6.8V133z"/>
-            <path class="st0" d="M164,140.8h2.5c0.4,0,0.8,0,1.2,0c0.4,0,0.8-0.1,1.1-0.2c0.3-0.1,0.6-0.3,0.9-0.6c0.2-0.3,0.3-0.7,0.3-1.2
-              c0-0.5-0.1-0.9-0.3-1.2c-0.2-0.3-0.4-0.5-0.8-0.7c-0.3-0.2-0.7-0.3-1-0.3c-0.4-0.1-0.8-0.1-1.2-0.1H164V140.8z M159.9,133h7.3
-              c1,0,1.9,0.1,2.7,0.3c0.9,0.2,1.6,0.5,2.3,0.9c0.7,0.4,1.2,1,1.5,1.8c0.4,0.7,0.6,1.7,0.6,2.8c0,1.3-0.4,2.5-1,3.4
-              c-0.7,0.9-1.7,1.5-3,1.8l4.8,8h-5l-4-7.6H164v7.6h-4.2V133z"/>
-          </g>
-          <polygon class="st0" points="184.8,133 197.7,133 197.7,136.8 189,136.8 189,140.4 197.2,140.4 197.2,144.2 189,144.2 189,148.1
-            198.2,148.1 198.2,151.9 184.8,151.9 		"/>
-          <polygon class="st0" points="209,133 214.7,133 222.7,146.1 222.8,146.1 222.8,133 226.9,133 226.9,151.9 221.5,151.9
-            213.2,138.4 213.2,138.4 213.2,151.9 209,151.9 		"/>
-          <polygon class="st0" points="240.8,140.5 237.4,140.5 239.4,133 243.2,133 		"/>
-          <g>
-            <path class="st0" d="M263,137.6c-0.3-0.4-0.8-0.7-1.4-0.9c-0.6-0.2-1.1-0.3-1.6-0.3c-0.3,0-0.6,0-0.9,0.1
-              c-0.3,0.1-0.6,0.2-0.9,0.3c-0.3,0.2-0.5,0.4-0.7,0.6c-0.2,0.2-0.3,0.6-0.3,0.9c0,0.6,0.2,1,0.6,1.3c0.4,0.3,1,0.6,1.6,0.8
-              c0.7,0.2,1.3,0.4,2.1,0.6c0.7,0.2,1.4,0.5,2.1,0.9c0.7,0.4,1.2,0.9,1.6,1.6c0.4,0.7,0.6,1.5,0.6,2.6c0,1.1-0.2,2-0.6,2.8
-              c-0.4,0.8-0.9,1.4-1.6,2c-0.7,0.5-1.4,0.9-2.3,1.2c-0.9,0.2-1.8,0.4-2.8,0.4c-1.2,0-2.4-0.2-3.4-0.6c-1.1-0.4-2-1-2.9-1.8l3-3.3
-              c0.4,0.6,1,1,1.6,1.3c0.7,0.3,1.3,0.5,2,0.5c0.3,0,0.7,0,1-0.1c0.4-0.1,0.7-0.2,0.9-0.4c0.3-0.2,0.5-0.4,0.7-0.6
-              c0.2-0.2,0.3-0.5,0.3-0.9c0-0.6-0.2-1-0.7-1.4c-0.4-0.3-1-0.6-1.6-0.8c-0.7-0.2-1.4-0.5-2.1-0.7c-0.8-0.2-1.5-0.5-2.1-0.9
-              c-0.7-0.4-1.2-0.9-1.6-1.5c-0.4-0.6-0.7-1.5-0.7-2.5c0-1,0.2-1.9,0.6-2.7c0.4-0.8,0.9-1.4,1.6-1.9c0.7-0.5,1.4-0.9,2.3-1.2
-              c0.9-0.3,1.8-0.4,2.7-0.4c1.1,0,2.1,0.2,3.1,0.5c1,0.3,1.9,0.8,2.7,1.5L263,137.6z"/>
-          </g>
-          <polygon class="st0" points="292.1,133 304.7,133 304.7,136.8 296.2,136.8 296.2,140.7 304.1,140.7 304.1,144.5 296.2,144.5
-            296.2,151.9 292.1,151.9 		"/>
-          <g>
-            <path class="st0" d="M318.5,142.4c0,0.9,0.1,1.7,0.4,2.4c0.3,0.7,0.7,1.4,1.2,1.9c0.5,0.5,1.1,1,1.9,1.3c0.7,0.3,1.5,0.5,2.4,0.5
-              c0.9,0,1.7-0.2,2.4-0.5c0.7-0.3,1.3-0.7,1.9-1.3c0.5-0.5,0.9-1.2,1.2-1.9c0.3-0.7,0.4-1.6,0.4-2.4c0-0.9-0.1-1.7-0.4-2.4
-              c-0.3-0.8-0.7-1.4-1.2-1.9c-0.5-0.5-1.1-1-1.9-1.3c-0.7-0.3-1.5-0.5-2.4-0.5c-0.9,0-1.7,0.2-2.4,0.5c-0.7,0.3-1.3,0.7-1.9,1.3
-              c-0.5,0.5-0.9,1.2-1.2,1.9C318.7,140.8,318.5,141.6,318.5,142.4 M314.2,142.4c0-1.5,0.3-2.9,0.8-4.1c0.5-1.2,1.2-2.3,2.1-3.1
-              c0.9-0.9,2-1.5,3.2-2c1.3-0.5,2.6-0.7,4.1-0.7c1.5,0,2.8,0.2,4.1,0.7c1.2,0.5,2.3,1.1,3.2,2c0.9,0.9,1.6,1.9,2.1,3.1
-              c0.5,1.2,0.8,2.6,0.8,4.1c0,1.5-0.3,2.9-0.8,4.1c-0.5,1.2-1.2,2.3-2.1,3.1c-0.9,0.9-2,1.5-3.2,2c-1.3,0.5-2.6,0.7-4.1,0.7
-              c-1.5,0-2.8-0.2-4.1-0.7c-1.2-0.5-2.3-1.1-3.2-2c-0.9-0.9-1.6-1.9-2.1-3.1C314.5,145.3,314.2,144,314.2,142.4"/>
-            <path class="st0" d="M360.9,144.6c0,1.1-0.2,2.2-0.5,3.1c-0.3,0.9-0.8,1.8-1.5,2.5c-0.7,0.7-1.5,1.2-2.5,1.6
-              c-1,0.4-2.1,0.6-3.5,0.6c-1.3,0-2.5-0.2-3.5-0.6c-1-0.4-1.8-0.9-2.5-1.6c-0.7-0.7-1.2-1.5-1.5-2.5c-0.3-0.9-0.5-2-0.5-3.1V133
-              h4.2v11.5c0,0.6,0.1,1.1,0.3,1.6s0.5,0.9,0.8,1.3c0.3,0.4,0.7,0.7,1.2,0.9c0.5,0.2,1,0.3,1.5,0.3s1.1-0.1,1.5-0.3
-              c0.5-0.2,0.9-0.5,1.2-0.9c0.3-0.4,0.6-0.8,0.8-1.3c0.2-0.5,0.3-1,0.3-1.6V133h4.2V144.6z"/>
-          </g>
-          <polygon class="st0" points="372.2,133 377.9,133 386,146.1 386,146.1 386,133 390.2,133 390.2,151.9 384.7,151.9 376.5,138.4
-            376.4,138.4 376.4,151.9 372.2,151.9 		"/>
-          <g>
-            <path class="st0" d="M405.7,148.1h2.2c1,0,1.9-0.1,2.7-0.3c0.8-0.2,1.6-0.5,2.2-1c0.6-0.5,1.1-1.1,1.4-1.8
-              c0.4-0.7,0.5-1.6,0.5-2.7c0-0.9-0.2-1.7-0.5-2.4c-0.3-0.7-0.8-1.2-1.4-1.7c-0.6-0.4-1.3-0.8-2.1-1c-0.8-0.2-1.6-0.3-2.5-0.3h-2.5
-              V148.1z M401.5,133h6.2c1.5,0,3,0.2,4.3,0.5c1.4,0.3,2.5,0.9,3.6,1.6c1,0.8,1.8,1.7,2.4,3c0.6,1.2,0.9,2.7,0.9,4.4
-              c0,1.5-0.3,2.9-0.9,4c-0.6,1.2-1.4,2.1-2.3,2.9c-1,0.8-2.1,1.4-3.4,1.8c-1.3,0.4-2.6,0.6-4,0.6h-6.8V133z"/>
-          </g>
-          <path class="st0" d="M437.1,138.5l-2.3,5.9h4.6L437.1,138.5z M435.5,133h3.4l8.2,18.9h-4.7l-1.6-4h-7.4l-1.6,4h-4.6L435.5,133z"/>
-          <polygon class="st0" points="457.8,136.7 452.4,136.7 452.4,133 467.4,133 467.4,136.7 462,136.7 462,151.9 457.8,151.9 		"/>
-          <rect x="476.9" y="133" class="st0" width="4.2" height="18.9"/>
-          <g>
-            <path class="st0" d="M495.7,142.4c0,0.9,0.1,1.7,0.4,2.4c0.3,0.7,0.7,1.4,1.2,1.9c0.5,0.5,1.1,1,1.9,1.3c0.7,0.3,1.5,0.5,2.4,0.5
-              c0.9,0,1.7-0.2,2.4-0.5c0.7-0.3,1.3-0.7,1.9-1.3c0.5-0.5,0.9-1.2,1.2-1.9c0.3-0.7,0.4-1.6,0.4-2.4c0-0.9-0.1-1.7-0.4-2.4
-              c-0.3-0.8-0.7-1.4-1.2-1.9c-0.5-0.5-1.1-1-1.9-1.3c-0.7-0.3-1.5-0.5-2.4-0.5c-0.9,0-1.7,0.2-2.4,0.5c-0.7,0.3-1.3,0.7-1.9,1.3
-              c-0.5,0.5-0.9,1.2-1.2,1.9C495.8,140.8,495.7,141.6,495.7,142.4 M491.3,142.4c0-1.5,0.3-2.9,0.8-4.1c0.5-1.2,1.2-2.3,2.1-3.1
-              c0.9-0.9,2-1.5,3.2-2c1.3-0.5,2.6-0.7,4.1-0.7c1.5,0,2.8,0.2,4.1,0.7c1.2,0.5,2.3,1.1,3.2,2c0.9,0.9,1.6,1.9,2.1,3.1
-              c0.5,1.2,0.8,2.6,0.8,4.1c0,1.5-0.3,2.9-0.8,4.1c-0.5,1.2-1.2,2.3-2.1,3.1c-0.9,0.9-2,1.5-3.2,2c-1.3,0.5-2.6,0.7-4.1,0.7
-              c-1.5,0-2.8-0.2-4.1-0.7c-1.2-0.5-2.3-1.1-3.2-2c-0.9-0.9-1.6-1.9-2.1-3.1C491.6,145.3,491.3,144,491.3,142.4"/>
-          </g>
-          <polygon class="st0" points="522.1,133 527.8,133 535.8,146.1 535.8,146.1 535.8,133 540,133 540,151.9 534.6,151.9 526.3,138.4
-            526.3,138.4 526.3,151.9 522.1,151.9 		"/>
-          </g>
-          <g>
-          <g>
-            <rect x="318.1" y="38.8" class="st0" width="18.3" height="64.9"/>
-            <rect x="295.6" y="29.6" class="st1" width="63.2" height="18.3"/>
-            <g>
-              <path class="st2" d="M101.9,85.7c-10.5,0-19-8.5-19-19c0-10.5,8.5-19,19-19c10.5,0,19,8.5,19,19
-                C120.9,77.1,112.4,85.7,101.9,85.7 M101.9,29.6c-20.4,0-37,16.6-37,37c0,20.4,16.6,37,37,37c20.4,0,37-16.6,37-37
-                C138.9,46.2,122.3,29.6,101.9,29.6"/>
-            </g>
-            <rect x="530.4" y="29.6" class="st1" width="18.3" height="74"/>
-            <rect x="530.4" y="85.3" class="st3" width="44.1" height="18.3"/>
-            <rect x="222.9" y="29.6" class="st4" width="18.3" height="74"/>
-            <polygon class="st0" points="285.5,103.6 267.1,103.5 222.9,29.6 241.2,29.7 			"/>
-            <rect x="267.2" y="29.6" class="st2" width="18.3" height="74"/>
-            <rect x="402.4" y="29.6" class="st1" width="18.3" height="74"/>
-            <rect x="402.4" y="29.6" class="st2" width="44.1" height="18.3"/>
-            <rect x="402.4" y="61.1" class="st3" width="38.5" height="18.3"/>
-            <path class="st5" d="M147.9,72.2V29.8h18.3v42.4c0,7.3,6,13.3,13.3,13.3c7.3,0,13.3-6,13.3-13.3V29.8h18.3v42.4
-              c0,17.5-14.1,31.6-31.6,31.6S147.9,89.7,147.9,72.2z"/>
-            <path class="st3" d="M32.1,29.6H5.6v18h26.5c2.9,0,5.3,2.4,5.3,5.3c0,2.9-2.4,5.3-5.3,5.3H5.6v18h26.5
-              c12.8,0,23.3-10.4,23.3-23.3S44.9,29.6,32.1,29.6z"/>
-            <g>
-              <path class="st1" d="M5.6,58.2v18h29.1c2.8,0,5,2.2,5,5s-2.2,5-5,5H5.6v17.4H35c12.5,0,22.7-10.2,22.7-22.7S47.5,58.2,35,58.2
-                H5.6v17.6"/>
-            </g>
-            <path class="st0" d="M456.3,72.2V29.8h18.3v42.4c0,7.3,6,13.3,13.3,13.3c7.3,0,13.3-6,13.3-13.3V29.8h18.3v42.4
-              c0,17.5-14.1,31.6-31.6,31.6S456.3,89.7,456.3,72.2z"/>
-            <rect x="5.6" y="29.6" class="st0" width="18.3" height="74"/>
-          </g>
-          <rect x="369.2" y="29.6" class="st5" width="18.3" height="74"/>
-          </g>
-          </g>
-        </svg>
-				<div class="inner">
-					<!-- <img class ="palerbg" src="bcfassets/Bountiful-logo.png" /> -->
-					<h1>Welcome <br />
-          to <strong>Donor Management Services</strong></h1>
-					<p>Saving lives since 2008,<br />
-					and much faster since 2019.</p>
-          <ul class="actions special">
-            <li></li>
-            <li><a href="login.html" class="button wide primary">Log In</a></li>
-						<li><a href="login.html" class="button wide">Request Account</a></li>
-            <!-- <li><a href="#" class="button wide">More Info</a></li> -->
-					</ul>
-				</div>
-			</section>
-
       <section>
       <!-- <ul class="actions special">
         <li><a href="login.html" class="button wide primary">Log In</a></li>
