Buttons prettied, compass rotates.

--- a/about.html
+++ b/about.html
@@ -29,7 +29,9 @@ MVP: Board members can log in and see a list of donors and the time they were la
 
     <nav id="compass-bar">
       <a href="#" id="compass-link"><i id="compass-icon" class="major icon fa-compass"></i></a>
-      <a href="#" class="button">About Us</a>
+      <div id="navpanel">
+        <a href="#" class="button nav-button">About Us</a>
+      </div>
     </nav>
     <!-- <header><img src="bcfassets/Bountiful-logo.png" /></header> -->
 		<!-- Header -->
