About Page roughed out.

--- a/about.html
+++ b/about.html
@@ -29,7 +29,9 @@ MVP: Board members can log in and see a list of donors and the time they were la
 
     <nav id="compass-bar">
       <a href="#" id="compass-link"><i id="compass-icon" class="major icon fa-compass"></i></a>
-      <div id="navpanel">
+      <div id="navpanel" class="invisible">
+        <a href="#" class="button nav-button primary">Log In</a>
+        <a href="#" class="button nav-button">Sign Up</a>
         <a href="#" class="button nav-button">About Us</a>
       </div>
     </nav>
@@ -67,10 +69,10 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
     </div>
     </section>
     <section id="two" class="main style1">
-      <div class="container">
-      <h3>Built By</h3>
-      <p>the Students of Lambda School</p>
-      <svg class="d-block" width="32" height="32" viewbox="75 80 177 180" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>Lambda</title><path d="M151.48572955 113.62307213l-40.54266566 72.53066485h22.85333277l29.78266592-53.83333199 29.78266592 53.83333199h22.85333276l-40.54266565-72.53066485z" fill="#B22222" /><path d="M163.37039592 235.8932024l-62.28666511-44.23333222v-90.92399773h125.02666354v90.62799773zM81.95573128 82.19853958V201.2265366l81.41466464 57.85866522 81.83199795-58.15466521V82.19853958z" fill="#B22222" /></svg>
+      <div class="container wordbox">
+        <h3>Built By</h3>
+        <p>the New Developers of</p>
+        <h4>Lambda School <svg class="d-block" width="1em" viewbox="75 80 177 180" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>Lambda</title><path d="M151.48572955 113.62307213l-40.54266566 72.53066485h22.85333277l29.78266592-53.83333199 29.78266592 53.83333199h22.85333276l-40.54266565-72.53066485z" fill="#B22222" /><path d="M163.37039592 235.8932024l-62.28666511-44.23333222v-90.92399773h125.02666354v90.62799773zM81.95573128 82.19853958V201.2265366l81.41466464 57.85866522 81.83199795-58.15466521V82.19853958z" fill="#B22222" /></svg></h4>
 
     </div>
     </section>
@@ -120,40 +122,40 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 			</section> -->
 
 		<!-- Three -->
-			<!-- <section id="three" class="main style1 special">
+			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>Featuring</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<!-- <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p> -->
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="images/brandoncampbell.jpg" alt="" /></span>
+							<h3>Brandon Campbell</h3>
+							<p>Server Architect</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+                <li><a href="#" class="button"><i class="icon fa-github"></i></a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="images/modestotamayo.jpg" alt="" /></span>
+							<h3>Modesto Tamayo</h3>
+							<p>Webapp Architect</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+                <li><a href="#" class="button"><i class="icon fa-github"></i></a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="images/jubileegradient.jpg" alt="" /></span>
+							<h3>Jubilee Young</h3>
+							<p>Website Design</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button"><i class="icon alt fa-github"></i></a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
-			</section> -->
+			</section>
 
 		<!-- Four -->
 			<!-- <section id="four" class="main style2 special">
