--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
     </div>
     </section>
     <section id="two" class="main style1">
-      <div class="container">
+      <div class="container wordbox">
       <h3>Built By</h3>
-      <p>the Students of Lambda School</p>
-      <svg class="d-block" width="32" height="32" viewbox="75 80 177 180" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>Lambda</title><path d="M151.48572955 113.62307213l-40.54266566 72.53066485h22.85333277l29.78266592-53.83333199 29.78266592 53.83333199h22.85333276l-40.54266565-72.53066485z" fill="#B22222" /><path d="M163.37039592 235.8932024l-62.28666511-44.23333222v-90.92399773h125.02666354v90.62799773zM81.95573128 82.19853958V201.2265366l81.41466464 57.85866522 81.83199795-58.15466521V82.19853958z" fill="#B22222" /></svg>
+      <p>the New Developers of</p>
+      <h4>Lambda School <svg class="d-block" width="1em" viewbox="75 80 177 180" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>Lambda</title><path d="M151.48572955 113.62307213l-40.54266566 72.53066485h22.85333277l29.78266592-53.83333199 29.78266592 53.83333199h22.85333276l-40.54266565-72.53066485z" fill="#B22222" /><path d="M163.37039592 235.8932024l-62.28666511-44.23333222v-90.92399773h125.02666354v90.62799773zM81.95573128 82.19853958V201.2265366l81.41466464 57.85866522 81.83199795-58.15466521V82.19853958z" fill="#B22222" /></svg></h4>
 
     </div>
     </section>
@@ -586,7 +586,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</div>
 								<div class="col-12">
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input tBuilt By
+the Students of Lambda Schoolype="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</div>
@@ -635,7 +636,7 @@ On mobile, it should look like
 					<li><a href="#" class="icon style3 alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Design: Jubilee Young & <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Jubilee Young, Modesto Tamayo, Brandon Campbell & <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
