Compass bugfixed, terse about page drafted.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ MVP: Board members can log in and see a list of donors and the time they were la
 
     <nav id="compass-bar">
       <a href="#" id="compass-link"><i id="compass-icon" class="major icon fa-compass"></i></a>
+      <div id="nav-panel" class="invisible">
+        <a href="login.html" class="button nav-button primary">Log In</a>
+        <a href="#" class="button nav-button">Sign Up</a>
+        <a href="about.html" class="button nav-button">About Us</a>
+      </div>
     </nav>
     <!-- <header><img src="bcfassets/Bountiful-logo.png" /></header> -->
 		<!-- Header -->
@@ -204,6 +209,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
       <h3>Built By</h3>
       <p>the New Developers of</p>
       <h4>Lambda School <svg class="d-block" width="1em" viewbox="75 80 177 180" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>Lambda</title><path d="M151.48572955 113.62307213l-40.54266566 72.53066485h22.85333277l29.78266592-53.83333199 29.78266592 53.83333199h22.85333276l-40.54266565-72.53066485z" fill="#B22222" /><path d="M163.37039592 235.8932024l-62.28666511-44.23333222v-90.92399773h125.02666354v90.62799773zM81.95573128 82.19853958V201.2265366l81.41466464 57.85866522 81.83199795-58.15466521V82.19853958z" fill="#B22222" /></svg></h4>
+      <a href="about.html" class="button nav-button">About Us</a>
 
     </div>
     </section>
