--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@ MVP: Board members can log in and see a list of donors and the time they were la
     <nav id="compass-bar">
       <a href="#" id="compass-link"><i id="compass-icon" class="major icon fa-compass"></i></a>
       <div id="nav-panel" class="invisible">
-        <a href="login.html" class="button nav-button primary">Log In</a>
-        <a href="#" class="button nav-button">Sign Up</a>
+        <a href="https://donor-management.netlify.com/" class="button nav-button primary">Log In</a>
+        <!-- <a href="#" class="button nav-button">Sign Up</a> -->
         <a href="about.html" class="button nav-button">About Us</a>
       </div>
     </nav>
