I ruthlessly metagame sometimes.
To elaborate: I dropped a bunch of components in and two pages, one I might need
and one I probably won't, but which contains all the HTML I could possibly need.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ MVP: Board members can log in and see a list of donors and the time they were la
         <a href="https://donor-management.netlify.com/" class="button nav-button primary">Log In</a>
         <!-- <a href="#" class="button nav-button">Sign Up</a> -->
         <a href="about.html" class="button nav-button">About Us</a>
+        <a href="info.html" class="button nav-button">More Info</a>
+        <!-- <a href="index.html" class="button nav-button">Return</a> -->
       </div>
     </nav>
     <!-- <header><img src="bcfassets/Bountiful-logo.png" /></header> -->
@@ -238,6 +240,9 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 			<!-- <script src="assets/js/util.js"></script> -->
 			<script src="assets/js/main.js"></script>
       <script src="assets/js/compass.js"></script>
+      <script src="assets/js/Article.js"></script>
+      <script src="assets/js/Carousel.js"></script>
+      <script src="assets/js/Menu.js"></script>
 
 	</body>
 </html>
